# my-stm32-f103-hal-project-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig_例子.h  FreeRTOSConfig——例子.h  README.md  STM32F103ZETX_FLASH.ld  launch.vs.json  link-script.ld  workspace.code-workspace
Main/: CMakeLists.txt
Main/src/: Main.cpp  Main.h
Main/src/SYSTEM/: readme.txt
Main/src/SYSTEM/sys/: sys.cpp  sys.h
atk-stm32f103/: CMakeLists.txt
atk-stm32f103/include/atk-stm32f103/: AtkClock.cpp  AtkExtiKey.cpp  AtkExtiKey.h  AtkKey.cpp  AtkKeyScanner.cpp  AtkKeyScanner.h  AtkLed.cpp  AtkLed.h  AtkWindowWatchDog.cpp  AtkWindowWatchDog.h  Clock.cpp  Clock.h  ExtiKey.cpp  ExtiKey.h  Key.cpp  Key.h  Led.cpp  Led.h  bsp.cpp  bsp.h  dependencies-provider.cpp  dependencies-provider.h
atk-stm32f103/include/atk-stm32f103/peripheral/: IndependentWatchDog.cpp  IndependentWatchDog.h
atk-stm32f103/include/atk-stm32f103/sys/: sys.cpp
atk-stm32f103/include/atk-stm32f103/test/: TestIndependentWatchDog.cpp  TestIndependentWatchDog.h  TestKeyScanner.cpp  TestKeyScanner.h
atk-stm32f103/include/atk-stm32f103/uart/: Uart.cpp  Uart.h  Uart1.cpp  Uart1.h
atk-stm32f103/include/atk-stm32f103/usart/: usart.c  usart.h
atk-stm32f103/include/bsp/: bsp.cpp  bsp.h  di.cpp
atk-stm32f103/private_src/: AtkClock.cpp  AtkExtiKey.cpp  AtkExtiKey.h  AtkKey.cpp  AtkKey.h  BaseTimer.cpp  BaseTimer.h  BaseTimer1.cpp  BaseTimer1.h  Delayer.cpp  Delayer.h  DigitalLed.cpp  DigitalLed.h  ExtiWakeUpKey.cpp  ExtiWakeUpKey.h  Implement-freertos-interface.cpp  Implement_stdio.cpp  Lcd.cpp  Lcd.h  Serial.cpp  Serial.h  freertos-setup.cpp  freertos_port.cpp  freertos_setup.cpp  freertos_systic_handler.cpp  reload_new.cpp  startup_stm32f103xe.s
atk-stm32f103/private_src/base-timer/: BaseTimer1.cpp  BaseTimer1.h  BaseTimerInitOptions.cpp  BaseTimerInitOptions.h
atk-stm32f103/private_src/clock/: ClockSignal.cpp  ClockSignal.h  ClockSignalConfig.cpp  ConfigClockSignal.cpp  ConfigClockSignal.h  Osc.h  OscConfig.cpp  OscConfig.h  OscInitOptions.cpp  OscInitOptions.h  PllConfig.cpp  PllInitOptions.cpp  PllInitOptions.h  Systic.cpp  Systic.h
atk-stm32f103/private_src/clock/clock-signal/: ClockSignal.cpp  ClockSignal.h  ClockSignalConfig.cpp  ClockSignalEnum.cpp  ClockSignalEnum.h  ClockSignalInitOptions.cpp  ClockSignalInitOptions.h
atk-stm32f103/private_src/clock/clock-signal-config/: AhbClkConfig.cpp  ClockSignalConfig.h  SystemClockConfig.cpp
atk-stm32f103/private_src/clock/config/: AhbClkConfig.h  ApbClkConfig.cpp  ApbClkConfig.h  SystemClockConfig.h
atk-stm32f103/private_src/device/: AtkExtiKey.cpp  AtkKey.cpp  AtkKey.h  DigitalLed.cpp  DigitalLed.h  ExtiWakeUpKey.cpp  ExtiWakeUpKey.h  Lcd.cpp  Lcd.h
atk-stm32f103/private_src/di/: key.cpp
atk-stm32f103/private_src/dma/: DmaEnum.h  DmaInitOptions.cpp
atk-stm32f103/private_src/gpio/: GpioPinInitOptions.h  GpioPort.cpp  GpioPort.h  GpioTypeDef.h  IGpioPort.cpp  IGpioPort.h
atk-stm32f103/private_src/interrupt/: Exti.cpp  Exti.h  Interrupt.cpp  Interrupt.h
atk-stm32f103/private_src/lvgl_port/: lv_port_disp.cpp  lv_port_indev_template.c  lv_port_lcd_stm32_template.c
atk-stm32f103/private_src/peripheral/base-timer/: BaseTimer1.cpp  BaseTimer1.h  BaseTimerConfig.cpp  BaseTimerConfig.h  BaseTimerInitOptions.cpp  BaseTimerInitOptions.h
atk-stm32f103/private_src/peripheral/dma/: DmaConfig.cpp  DmaConfig.h  DmaEnum.h  DmaInitOptions.cpp  DmaInitOptions.h
atk-stm32f103/private_src/peripheral/fsmc/: FsmcNorSramInitOptions.cpp  FsmcNorSramInitOptions.h  FsmcNorSramTiming.cpp  FsmcNorSramTiming.h
atk-stm32f103/private_src/port/: freertos_port.cpp  reload_new.cpp  startup_stm32f103xe.s
atk-stm32f103/private_src/serial/: Serial.cpp  Serial.h
atk-stm32f103/private_src/task/: BinarySemaphore.cpp  BinarySemaphore.h  Critical.h  Mutex.cpp  Mutex.h  freertos_systic_handler.cpp
atk-stm32f103/src/: Clock.cpp  Led.cpp  atk-stm32f103_Clock.h
atk-stm32f103/src/sys/: sys.cpp  sys.h
atk-stm32f103/src/usart/: usart.c
bsp-interface/: CMakeLists.txt
bsp-interface/include/bsp-interface/: AutoBitConverter.cpp  AutoBitConverter.h  BitConverter.cpp  BitConverter.h  CircleBufferMemoryStream.h  DisplayEnum.h  EndianConverter.cpp  EndianConverter.h  IBaseTimer.cpp  IBaseTimer.h  IDelayer.h  IDigitalLed.cpp  IDigitalLed.h  IDigitalPin.h  IEventDrivenKey.h  IIndependentWatchDog.h  IKey.cpp  IKey.h  IKeyScanner.h  ILcd.cpp  ILcd.h  ISerial.cpp  ISerial.h  IWatchDog.h  JoinByte.cpp  JoinByte.h  Json.h  KeyScanner.cpp  KeyScanner.h  Stream.cpp  Stream.h  ToString.h
cmsis-dsp/: CMakeLists.txt
hal-wrapper/: CMakeLists.txt
hal-wrapper/include/hal-wrapper/: Clock.h  Delayer.cpp  Delayer.h  GpioPort.cpp  GpioPort.h  IClockSwitchable.h  IHandleWrapper.h  IHardwareInstanceWrapper.h  Osc.cpp  Osc.h  Systic.cpp  Systic.h  define.h
hal-wrapper/src/: Clock.h  GpioPort.cpp  Osc.cpp  Osc.h  Peripheral.cpp  Peripheral.h  Systic.cpp  Systic.h  SysticOperator.h
hal-wrapper/src/interface/: GpioPort.cpp  GpioPort.h
stm32f103-hal/: CMakeLists.txt  readme.txt
stm32f103-hal-wrapper/: CMakeLists.txt
stm32f103-hal-wrapper/include/hal-wrapper/: GpioManager.cpp  GpioManager.h  di.cpp
stm32f103-hal/include/: hal.h  stm32f1xx_hal_conf.h
stm32f103-hal/src/: hal.h  stm32f1xx_hal_conf.h  stm32f1xx_it.cpp  stm32f1xx_it.h
stm32f103-hal/src/Users/: stm32f1xx_it.c
stm32f103-hal/src/start_up/: startup_stm32f103xe.s
test/: CMakeLists.txt
test/src/: HalError.cpp  HalErrorHandler.cpp  TestExtiKey.h  TestIndependentWatchDog.cpp  TestIndependentWatchDog.h  main.cpp  stdio.cpp  stm32f1xx_it.c  syscalls.c  syscalls.cpp  sysmem.c
test/src/Middlewares/: readme.txt
test/src/Users/: Clock.c  Clock.h  main.c  main.cpp  stm32f1xx_it.c  stm32f1xx_it.h  syscalls.c
test/src/test_functions/: TestBaseTimer.cpp  TestBaseTimer.h  TestEndianConverter.cpp  TestEndianConverter.h  TestExtiKey.cpp  TestIndependentWatchDog.cpp  TestJson.cpp  TestJson.h  TestKeyScanner.cpp  TestKeyScanner.h  TestLcd.cpp  TestLcd.h  TestSerial.cpp  TestSerial.h  test_functions.h
(+606 files in other folders)
